# exiftool-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  MIGRATION.md  README.md  build.rs  modif.md
.github/workflows/: ci.yml
examples/: json_output.rs  read_metadata.rs  write_tag.rs
locales/: ar.yml  bn.yml  cs.yml  de.yml  en.yml  en_ca.yml  en_gb.yml  es.yml  fi.yml  fr.yml  hi.yml  it.yml  ja.yml  ko.yml  nl.yml  pl.yml  pt.yml  ru.yml  sk.yml  sv.yml  tr.yml  zh.yml  zh_tw.yml
scripts/: gen_print_conv.pl  gen_sub_tables.pl  gen_tags.pl  test_iso.sh
src/: composite.rs  config.rs  encoding.rs  error.rs  exiftool.rs  file_type.rs  geolocation.rs  geotag.rs  gui.rs  i18n.rs  lib.rs  main.rs  md5.rs  tag.rs  value.rs
src/formats/: aac.rs  aiff.rs  ape.rs  asf.rs  audible.rs  bmp.rs  bpg.rs  bzz.rs  canon_raw.rs  canon_vrd.rs  capture_one.rs  czi.rs  dicom.rs  djvu.rs  dpx.rs  dss.rs  dv.rs  exe.rs  fits.rs  flac.rs  flashpix.rs  flif.rs  flir_fpf.rs  flv.rs  font.rs  gif.rs  gimp.rs  gzip.rs  hdr.rs  html.rs  icc.rs  ico.rs  id3.rs  iiq.rs  indesign.rs  iso.rs  itc.rs  jp2.rs  jpeg.rs  json_format.rs  (+58 more)
src/metadata/: exif.rs  google_hdrp.rs  iptc.rs  makernotes.rs  mod.rs  nikon_capture.rs  nikon_decrypt.rs  sony_decrypt.rs  xmp.rs
src/tags/: canon_sub.rs  exif.rs  generated.rs  iptc.rs  makernotes.rs  mod.rs  nikon_conv.rs  olympus_camera_types.rs  plus_media_matrix.rs  print_conv_generated.rs  sony_conv.rs  sub_tables_generated.rs
src/writer/: exif_writer.rs  extended_xmp.rs  flac_writer.rs  gif_writer.rs  heif_writer.rs  id3_writer.rs  iptc_writer.rs  jp2_writer.rs  jpeg_writer.rs  makernote_writer.rs  matroska_writer.rs  mod.rs  mp4_writer.rs  ogg_writer.rs  pdf_writer.rs  png_writer.rs  ps_writer.rs  psd_writer.rs  tiff_writer.rs  webp_writer.rs  xmp_sidecar_writer.rs  xmp_writer.rs
tests/: parity_baseline.txt  regression.rs  value_baseline.txt  write_roundtrip.rs
tests/expected/: AAC.aac.tags  AFCP.jpg.tags  AIFF.aif.tags  APE.ape.tags  APE.mpc.tags  ASF.wmv.tags  Apple.jpg.tags  Apple.tags  Audible.aa.tags  BMP.bmp.tags  BPG.bpg.tags  BigTIFF.btf.tags  Canon.jpg.tags  Canon1DmkIII.tags  CanonRaw.cr2.tags  CanonRaw.cr3.tags  CanonRaw.crw.tags  CanonVRD.dr4.tags  CanonVRD.vrd.tags  CaptureOne.eip.tags  Casio.tags  Casio2.tags  CasioQVCI.tags  DICOM.dcm.tags  DNG.dng.tags  DPX.dpx.tags  DV.dv.tags  DjVu.djvu.tags  EXE.a.tags  EXE.elf.tags  EXE.exe.tags  EXE.macho.tags  ExifTool.jps.tags  ExifTool.tags  ExifTool.tif.tags  ExtendedXMP.tags  FITS.fits.tags  FLAC.flac.tags  FLAC.ogg.tags  FLIF.flif.tags  (+147 more)
tests/expected_values/: AAC.aac.vals  AFCP.jpg.vals  AIFF.aif.vals  APE.ape.vals  APE.mpc.vals  ASF.wmv.vals  Apple.jpg.vals  Audible.aa.vals  BMP.bmp.vals  BPG.bpg.vals  BigTIFF.btf.vals  Canon.jpg.vals  Canon1DmkIII.jpg.vals  CanonRaw.cr2.vals  CanonRaw.cr3.vals  CanonRaw.crw.vals  CanonVRD.dr4.vals  CanonVRD.vrd.vals  CaptureOne.eip.vals  Casio.jpg.vals  Casio2.jpg.vals  CasioQVCI.jpg.vals  DICOM.dcm.vals  DNG.dng.vals  DPX.dpx.vals  DV.dv.vals  DjVu.djvu.vals  EXE.a.vals  EXE.dylib.vals  EXE.elf.vals  EXE.exe.vals  EXE.macho.vals  EXE.so.vals  ExifTool.jpg.vals  ExifTool.jps.vals  ExifTool.tif.vals  ExtendedXMP.jpg.vals  FITS.fits.vals  FLAC.flac.vals  FLAC.ogg.vals  (+153 more)
