[package]
name = "exiftool-rs"
version = "0.2.2"
edition = "2021"
rust-version = "1.71"
description = "Read, write, and edit metadata in 55+ file formats — a pure Rust reimplementation of ExifTool with 100% tag name parity (194/194 test files)"
license = "GPL-3.0-or-later"
repository = "https://github.com/Le-Syl21/exiftool-rs"
homepage = "https://github.com/Le-Syl21/exiftool-rs"
documentation = "https://docs.rs/exiftool-rs"
readme = "README.md"
keywords = ["exif", "metadata", "jpeg", "tiff", "xmp"]
categories = ["multimedia::images", "parser-implementations"]
exclude = [
    "scripts/",
    ".github/",
    "tests/images/",
    "tests/expected/",
]

[[bin]]
name = "exiftool-rs"
path = "src/main.rs"

[lib]
name = "exiftool_rs"
path = "src/lib.rs"

[dependencies]
thiserror = "2"
byteorder = "1"
xml-rs = "0.8"
encoding_rs = "0.8"
flate2 = "1"
brotli = "7"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
