[package]
name = "exiftool-rs"
version = "0.4.5"
edition = "2021"
rust-version = "1.71"
description = "Read, write, and edit metadata in 93 file formats — a pure Rust reimplementation of ExifTool 13.53 with 100% tag name parity (194/194 test files)"
license = "GPL-3.0-or-later"
repository = "https://github.com/Le-Syl21/exiftool-rs"
homepage = "https://github.com/Le-Syl21/exiftool-rs"
documentation = "https://docs.rs/exiftool-rs"
readme = "README.md"
keywords = ["exif", "metadata", "jpeg", "tiff", "xmp"]
categories = ["multimedia::images", "parser-implementations"]
exclude = [
    "scripts/",
    ".github/",
    "tests/images/",
    "tests/expected/",
    "assets/fonts/",
    "assets/screenshot.png",
]

[[bin]]
name = "exiftool-rs"
path = "src/main.rs"

[[bin]]
name = "exiftool-rs-gui"
path = "src/gui.rs"
required-features = ["gui"]

[lib]
name = "exiftool_rs"
path = "src/lib.rs"

[features]
default = []
win-icon = ["winres"]
gui = ["eframe", "egui", "image", "rfd", "noto-fonts-dl"]

[dependencies]
thiserror = "2"
byteorder = "1"
xml-rs = "0.8"
encoding_rs = "0.8"
flate2 = "1"
brotli = "7"
unicode-width = "0.2"

# GUI dependencies (optional)
eframe = { version = "0.31", optional = true }
egui = { version = "0.31", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["jpeg", "png", "gif", "bmp", "tiff"] }
rfd = { version = "0.15", optional = true }
noto-fonts-dl = { version = "0.1", optional = true, features = ["ar", "bn", "hi", "ja", "ko", "zh", "zh_tw"] }

[target.'cfg(windows)'.build-dependencies]
winres = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
